--- a/docker-compose.stack.yml
+++ b/docker-compose.stack.yml
@@ -13,8 +13,8 @@ services:
   redis:
     image: redis:6.0.9-alpine
     command: redis-server
-    ports:
-      - 6379:6379
+    expose:
+      - 6379
 
 volumes:
     postgres_data:
